@@ -34,6 +34,9 @@
 
         <!-- Jakarta EE API 10-->
         <jakartaee-api.version>10.0.0</jakartaee-api.version>  
+  
+        <!-- Logging -->
+        <slf4j.version>1.7.36</slf4j.version>
         
         <!-- Arquillian 1.7.0 adds Jakarta EE 9 and JUnit 5 support-->
         <arquillian-bom.version>1.8.0.Final</arquillian-bom.version>
@@ -92,6 +95,18 @@
             <groupId>jakarta.platform</groupId>
             <artifactId>jakarta.jakartaee-api</artifactId>
         </dependency>
+    
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        
         <dependency>
             <groupId>org.jboss.arquillian.junit5</groupId>
             <artifactId>arquillian-junit5-container</artifactId>
@@ -262,19 +277,6 @@
                     <version>${wildfly-arquillian.version}</version>
                     <scope>test</scope>
                 </dependency>
-                <!-- To fix 5.0.0.Alpha2 issue: https://github.com/wildfly/wildfly-arquillian/discussions/201#discussioncomment-1849214-->
-                <dependency>
-                    <groupId>org.jboss.remoting</groupId>
-                    <artifactId>jboss-remoting</artifactId>
-                    <version>5.0.25.Final</version>
-                    <scope>test</scope>
-                </dependency>
-                <dependency>
-                    <groupId>org.jboss.remotingjmx</groupId>
-                    <artifactId>remoting-jmx</artifactId>
-                    <version>3.0.4.Final</version>
-                    <scope>test</scope>
-                </dependency>
             </dependencies>
             <build>
                 <testResources>
@@ -294,6 +296,7 @@
                                 <arquillian.launch>wildfly-remote</arquillian.launch>
                                 <!-- <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager> -->
                             </systemPropertyVariables>
+                            <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED</argLine>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -328,17 +331,4 @@
             <url>https://nexus.payara.fish/repository/payara-artifacts/</url>
         </repository>
     </repositories>
-    <issueManagement>
-        <system>Github Issues</system>
-        <url>https://github.com/hantsy/jakartaee9-starter-boilerplate/issues</url>
-    </issueManagement>
-    <ciManagement>
-        <system>Github Actions</system>
-        <url>https://github.com/hantsy/jakartaee9-starter-boilerplate/actions</url>
-    </ciManagement>
-    <scm>
-        <url>https://github.com/hantsy/jakartaee9-starter-boilerplate</url>
-        <connection>scm:git:https://github.com/hantsy/jakartaee9-starter-boilerplate</connection>
-        <developerConnection>scm:git:https://github.com/hantsy/jakartaee9-starter-boilerplate</developerConnection>
-    </scm>
 </project>
